// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsDataWriter can export array 1`] = `
Object {
  "arr": Array [
    Object {
      "int": 1,
      "nullish": null,
      "str": "abc",
      "undef": undefined,
    },
    Object {
      "int": 1,
      "nullish": null,
      "str": "abc",
      "undef": undefined,
    },
    1,
    "abc",
    null,
    Object {},
    Array [],
    Array [
      Object {
        "int": 1,
        "nullish": null,
        "str": "abc",
        "undef": undefined,
      },
      Object {
        "int": 1,
        "nullish": null,
        "str": "abc",
        "undef": undefined,
      },
      1,
      "abc",
      null,
      Object {},
      Array [],
      [Circular],
    ],
  ],
}
`;

exports[`JsDataWriter can export array 2`] = `
Object {
  "arr": Array [
    Object {
      "int": 1,
      "nullish": null,
      "str": "abc",
      "undef": undefined,
    },
    Object {
      "int": 1,
      "nullish": null,
      "str": "abc",
      "undef": undefined,
    },
    1,
    "abc",
    null,
    Object {},
    Array [],
    Array [
      Object {
        "int": 1,
        "nullish": null,
        "str": "abc",
        "undef": undefined,
      },
      Object {
        "int": 1,
        "nullish": null,
        "str": "abc",
        "undef": undefined,
      },
      1,
      "abc",
      null,
      Object {},
      Array [],
      [Circular],
    ],
  ],
  "obj": Object {
    "int": 1,
    "nullish": null,
    "str": "abc",
    "undef": undefined,
  },
}
`;

exports[`JsDataWriter can export collection and children 1`] = `
Object {
  "child1": Object {
    "name": "child1",
  },
  "collection": Object {
    "children": Array [
      Object {
        "name": "child1",
      },
      Object {
        "name": "child2",
      },
    ],
  },
}
`;

exports[`JsDataWriter can export object 1`] = `
Object {
  "obj": Object {
    "int": 1,
    "nullish": null,
    "str": "abc",
    "undef": undefined,
  },
}
`;

exports[`JsDataWriter can export primitive values 1`] = `
Object {
  "int": 1,
  "nullish": null,
  "str": "abc",
  "undef": undefined,
}
`;

exports[`JsDataWriter can export recursive object 1`] = `
Object {
  "rec1": Object {
    "rec2": Object {
      "rec1": Object {
        "rec2": [Circular],
        "rec3": [Circular],
      },
    },
    "rec3": Object {
      "rec1": Object {
        "rec2": [Circular],
        "rec3": [Circular],
      },
    },
  },
  "rec2": Object {
    "rec1": Object {
      "rec2": [Circular],
      "rec3": [Circular],
    },
  },
}
`;

exports[`JsDataWriter can export recursive object 2`] = `
Object {
  "rec1": Object {
    "rec2": Object {
      "rec1": Object {
        "rec2": [Circular],
        "rec3": [Circular],
      },
    },
    "rec3": Object {
      "rec1": Object {
        "rec2": [Circular],
        "rec3": [Circular],
      },
    },
  },
  "rec2": Object {
    "rec1": Object {
      "rec2": [Circular],
      "rec3": [Circular],
    },
  },
  "recAlias1": Object {
    "rec2": Object {
      "rec1": Object {
        "rec2": [Circular],
        "rec3": [Circular],
      },
    },
    "rec3": Object {
      "rec1": Object {
        "rec2": [Circular],
        "rec3": [Circular],
      },
    },
  },
  "recAlias2": Object {
    "rec1": Object {
      "rec2": [Circular],
      "rec3": [Circular],
    },
  },
}
`;
